Changed client input method and fixed a bug